--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
+        android:name=".IconFinder"
         android:allowBackup="true"
         android:icon="@drawable/iconapp"
         android:label="@string/app_name"
